more paper updates

--- a/docs/splitform/dg.bib
+++ b/docs/splitform/dg.bib
@@ -1,3 +1,53 @@
+@article{harten1983symmetric,
+  title={On the symmetric form of systems of conservation laws with entropy},
+  author={Harten, Amiram},
+  journal={Journal of computational physics},
+  volume={49},
+  number={1},
+  pages={151--164},
+  year={1983},
+  publisher={Elsevier}
+}
+
+@article{kirby2003aliasing,
+  title={De-aliasing on non-uniform grids: algorithms and applications},
+  author={Kirby, Robert M and Karniadakis, George Em},
+  journal={Journal of Computational Physics},
+  volume={191},
+  number={1},
+  pages={249--264},
+  year={2003},
+  publisher={Elsevier}
+}
+
+@article{ranocha2017comparison,
+  title={Comparison of some Entropy Conservative Numerical Fluxes for the Euler Equations},
+  author={Ranocha, Hendrik},
+  journal={arXiv preprint arXiv:1701.02264},
+  year={2017}
+}
+
+@article{chandrashekar2013kinetic,
+  title={{Kinetic energy preserving and entropy stable finite volume schemes for compressible Euler and Navier-Stokes equations}},
+  author={Chandrashekar, Praveen},
+  journal={Communications in Computational Physics},
+  volume={14},
+  number={5},
+  pages={1252--1286},
+  year={2013},
+  publisher={Cambridge University Press}
+}
+
+@article{winters2017uniquely,
+  title={{A uniquely defined entropy stable matrix dissipation operator for high Mach number ideal MHD and compressible Euler simulations}},
+  author={Winters, Andrew R and Derigs, Dominik and Gassner, Gregor J and Walch, Stefanie},
+  journal={Journal of Computational Physics},
+  volume={332},
+  pages={274--289},
+  year={2017},
+  publisher={Elsevier}
+}
+
 @article{ranocha2017extended,
   title={Extended skew-symmetric form for summation-by-parts operators and varying Jacobians},
   author={Ranocha, Hendrik and {\"O}ffner, Philipp and Sonar, Thomas},
@@ -6,6 +56,17 @@
   pages={13--28},
   year={2017},
   publisher={Elsevier}
+}
+
+@article{gassner2013skew,
+  title={{A skew-symmetric discontinuous Galerkin spectral element discretization and its relation to SBP-SAT finite difference methods}},
+  author={Gassner, Gregor J},
+  journal={SIAM Journal on Scientific Computing},
+  volume={35},
+  number={3},
+  pages={A1233--A1253},
+  year={2013},
+  publisher={SIAM}
 }
 
 @article{gassner2017br1,
