--- a/docs/splitform/dg.bib
+++ b/docs/splitform/dg.bib
@@ -1,3 +1,59 @@
+@misc{mustonen2002logarithmic,
+  title={Logarithmic mean for several arguments},
+  author={Mustonen, Seppo},
+  howpublished={http://www.survo.fi/papers/logmean.pdf},
+  year={2002}
+}
+
+@article{derigs2016novel,
+  title={{A novel high-order, entropy stable, 3D AMR MHD solver with guaranteed positive pressure}},
+  author={Derigs, Dominik and Winters, Andrew R and Gassner, Gregor J and Walch, Stefanie},
+  journal={Journal of Computational Physics},
+  volume={317},
+  pages={223--256},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{ray2016entropy,
+  title={Entropy stable scheme on two-dimensional unstructured grids for Euler equations},
+  author={Ray, Deep and Chandrashekar, Praveen and Fjordholm, Ulrik S and Mishra, Siddhartha},
+  journal={Communications in Computational Physics},
+  volume={19},
+  number={5},
+  pages={1111--1140},
+  year={2016},
+  publisher={Cambridge University Press}
+}
+
+@article{wang2013weak,
+  title={{A weak Galerkin finite element method for second-order elliptic problems}},
+  author={Wang, Junping and Ye, Xiu},
+  journal={Journal of Computational and Applied Mathematics},
+  volume={241},
+  pages={103--115},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{fernandez2016simultaneous,
+  title={Simultaneous approximation terms for multi-dimensional summation-by-parts operators},
+  author={Fern{\'a}ndez, David C and Hicken, Jason E and Zingg, David W},
+  journal={arXiv preprint arXiv:1605.03214},
+  year={2016}
+}
+
+@article{ismail2009affordable,
+  title={{Affordable, entropy-consistent Euler flux functions II: Entropy production at shocks}},
+  author={Ismail, Farzad and Roe, Philip L},
+  journal={Journal of Computational Physics},
+  volume={228},
+  number={15},
+  pages={5410--5436},
+  year={2009},
+  publisher={Elsevier}
+}
+
 @article{harten1983symmetric,
   title={On the symmetric form of systems of conservation laws with entropy},
   author={Harten, Amiram},
@@ -109,6 +165,15 @@
   publisher={Elsevier}
 }
 
+@article{tadmor2016entropy,
+  title={Entropy stable schemes},
+  author={Tadmor, Eitan},
+  journal={Handbook of Numerical Analysis},
+  volume={17},
+  pages={467--493},
+  year={2016},
+  publisher={Elsevier}
+}
 @article{tadmor2003entropy,
   title={Entropy stability theory for difference approximations of nonlinear conservation laws and related time-dependent problems},
   author={Tadmor, Eitan},
@@ -149,6 +214,24 @@
   publisher={Elsevier}
 }
 
+
+@article{persson2006sub,
+  title={Sub-cell shock capturing for discontinuous Galerkin methods},
+  author={Persson, Per-Olof and Peraire, Jaime},
+  year={2006},
+  journal={AIAA},
+  number={112}
+}
+@article{wang2013high,
+  title={{High-order CFD methods: current status and perspective}},
+  author={Wang, Zhijian J and Fidkowski, Krzysztof and Abgrall, R{\'e}mi and Bassi, Francesco and Caraeni, Doru and Cary, Andrew and Deconinck, Herman and Hartmann, Ralf and Hillewaert, Koen and Huynh, Hung T and others},
+  journal={International Journal for Numerical Methods in Fluids},
+  volume={72},
+  number={8},
+  pages={811--845},
+  year={2013},
+  publisher={Wiley Online Library}
+}
 
 @article{carpenter2014entropy,
   title={{Entropy Stable Spectral Collocation Schemes for the Navier--Stokes Equations: Discontinuous Interfaces}},
@@ -989,6 +1072,16 @@ publisher={Elsevier}
   publisher={Springer}
 }
 
+@article{krivodonova2007limiters,
+  title={{Limiters for high-order discontinuous Galerkin methods}},
+  author={Krivodonova, Lilia},
+  journal={Journal of Computational Physics},
+  volume={226},
+  number={1},
+  pages={879--896},
+  year={2007},
+  publisher={Elsevier}
+}
 @article{fuhry2014discontinuous,
   title={Discontinuous {Galerkin} methods on graphics processing units for nonlinear hyperbolic conservation laws},
   author={Fuhry, Martin and Giuliani, Andrew and Krivodonova, Lilia},
